# Query-Partitioning-VLDB

./: APPENDIX.md  README.md  appendix_A1_placement_algorithm.md  appendix_A2_llm_prompt.md  appendix_A3_transfer_coefficients.md  appendix_A4_physical_plans_top10.md  appendix_A5_operator_hyperparams.md  appendix_A6_partioning.md  appendix_A7_runtime_percentiles.md  appendix_A8_cut_plans.md  appendix_A9_single_query_plans.md
cutter/: pom.xml
datafusion_profiler/: Cargo.toml
datafusion_profiler/src/: adapter_datafusion.rs  annotate.rs  io.rs  lib.rs  lineage.rs  normalize.rs  prune.rs  schema.rs
distributed_runner/dist_runner/: run_distributed.py
distributed_runner/distributed_executor/: __init__.py  distributed_runner.py  engines.py  executor.py  models.py
duckdb_profiler/duckdb_pipeline/: run_duckdb_pipeline.py
duckdb_profiler/duckdb_planbench/: __init__.py  annotations.py  collector.py  io.py  prune.py
llm_pipeline/llm_runner/: run_llm_pipeline.py
llm_pipeline/query_splitter/: prompts.py  rits_chat.py  splitter.py
llm_pipeline/runner/: __init__.py  benchmark.py  distributed_runner.py  engines.py  models.py  whole_query_cache.py
operators_models/: sweep_lgbm.yaml  sweep_xgb.yaml
operators_models/src/: config.py  models.py  partitioners.py  predict_runtime.py  preprocess.py  splitting.py  train.py  utils.py  visualize.py
profile_distributed/: run_profile_subqueries.py
resources/: whole_query_times.csv
resources/LLM_input/: LLM_job_prompt_infos.txt  LLM_stack_prompt_infos.txt  full_tpch_prompt.txt  (+4 more)
scripts/: intersect_and_clean.py  stats_LLM.py
(+18127 files in other folders)
