[package]
name = "df_metrics_dump"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
datafusion = "49"
itertools = "0.13"
regex = "1.10"
once_cell = "1.19"
parquet = "55"
